force-app/main/default/objects/edynamics__Chatter_Queue__c/edynamics__Chatter_Queue__c.object-meta.xml
<CustomObject>
    <label>Chatter Queue</label>
    <nameField>
        <label>Chatter Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>