force-app/main/default/objects/edynamics__Chatter_Queue__c/fields/edynamics__Archived__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>