force-app/main/default/objects/edynamics__Chatter_Queue__c/fields/edynamics__Feed_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Feed_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Feed Item Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>