force-app/main/default/objects/edynamics__Chatter_Queue__c/fields/edynamics__Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Queue_Type__c</fullName>
    <label>Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Old Post</fullName>
            </value>
            <value>
                <fullName>HTTP Message Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>