force-app/main/default/objects/edynamics__Chatter_Queue__c/listViews/edynamics__All.listView-meta.xml
<ListView>
    <fullName>edynamics__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>edynamics__Archived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>